# 8085

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cpu.cpp  cpu.h  cpu.hpp
tests/: .gitignore  CMakeLists.txt
tests/src/: basic_test.cpp  main_8085.cpp
